[tool.poetry]

name = "typefit"
version = "0.3.0"

description = "Fits JSON values into Python type-anotated objects"
license = "WTFPL"
authors = [
    "Rémy Sanchez <remy.sanchez@hyperthese.net>"
]

readme = "README.md"

repository = "https://github.com/Xowap/typefit/"
homepage = "https://github.com/Xowap/typefit/"

keywords = ["typing", "json", "api"]


[tool.poetry.dependencies]

python = "^3.7"
pendulum = "^2.0"
httpx = ">=0.12.*,<0.14"
pygments = "^2.6.1"


[tool.poetry.dev-dependencies]

pytest = "^5.2.1"
ipython = "*"
sphinx = "^2.2"
importlib-metadata = "^0.23.0"
isort = "^4.3"
black = "^19.10b0"
httpbin = "^0.7.0"

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
